Commit from LXDE Translation Project with Pootle by user Yinghua_Wang.: 136 of 137 messages translated (0 fuzzy).

--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-10-23 23:31+0800\n"
-"PO-Revision-Date: 2010-10-20 08:19+0200\n"
+"PO-Revision-Date: 2010-10-24 11:06+0200\n"
 "Last-Translator: Yinghua_Wang <wantinghard@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: zh_CN\n"
@@ -277,14 +277,12 @@ msgid "The preferred Web Browser will be used to open hyperlinks."
 msgstr "用于打开超链接的优先网络浏览器。"
 
 #: ../data/ui/exec-file.glade.h:1
-#, fuzzy
 msgid "Execute File"
-msgstr "多个文件"
+msgstr "执行文件"
 
 #: ../data/ui/exec-file.glade.h:2
-#, fuzzy
 msgid "Execute in _Terminal"
-msgstr "在终端模拟器中执行"
+msgstr "在终端模拟器中执行(_T)"
 
 #: ../src/base/fm-utils.c:54 ../src/base/fm-utils.c:83
 #, c-format
@@ -590,11 +588,13 @@ msgid ""
 "This text file '%s' seems to be an executable script.\n"
 "What do you want to do with it?"
 msgstr ""
+"“%s”这个文本文件好像是可执行脚本。\n"
+"您想如何处理它？"
 
 #: ../src/gtk/fm-gtk-file-launcher.c:93
 #, c-format
 msgid "This file '%s' is executable. Do you want to execute it?"
-msgstr ""
+msgstr "“%s”这个文件是可执行文件。您想执行它吗？"
 
 #: ../src/job/fm-dir-list-job.c:231 ../src/job/fm-dir-list-job.c:240
 #: ../src/job/fm-dir-list-job.c:337
