--- a/po/lg.po
+++ b/po/lg.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-10-24 11:11+0200\n"
-"PO-Revision-Date: 2010-10-15 23:19+0200\n"
+"PO-Revision-Date: 2010-10-25 14:57+0200\n"
 "Last-Translator: kizito <kbirabwa@yahoo.co.uk>\n"
 "Language-Team: lg <kbirabwa@yahoo.co.uk>\n"
 "Language: lg\n"
@@ -279,14 +279,12 @@ msgid "The preferred Web Browser will be used to open hyperlinks."
 msgstr "Ekyandaaza ky'olonzemu kye kinaakozesebwanga okukebera ennyunzi."
 
 #: ../data/ui/exec-file.glade.h:1
-#, fuzzy
 msgid "Execute File"
-msgstr "Fayiro ezisukka mu emu"
+msgstr "Tandika puloguramu eno"
 
 #: ../data/ui/exec-file.glade.h:2
-#, fuzzy
 msgid "Execute in _Terminal"
-msgstr "Omulimu gukolere okuva mu kiwandikiro"
+msgstr "Omulimu gukolere okuva mu _kiwandikiro"
 
 #: ../src/base/fm-utils.c:54 ../src/base/fm-utils.c:83
 #, c-format
@@ -596,11 +594,13 @@ msgid ""
 "This text file '%s' seems to be an executable script.\n"
 "What do you want to do with it?"
 msgstr ""
+"Fayiro ey'ebigambo '%s' eringa erimu ebiragiro bya kompyuta.\n"
+"Kiki ekiba kikolebwa wano?"
 
 #: ../src/gtk/fm-gtk-file-launcher.c:93
 #, c-format
 msgid "This file '%s' is executable. Do you want to execute it?"
-msgstr ""
+msgstr "Fayiro '%s' esobola okukola nga puloguramu. Oyagala okugitandika?"
 
 #: ../src/job/fm-dir-list-job.c:231 ../src/job/fm-dir-list-job.c:240
 #: ../src/job/fm-dir-list-job.c:337
@@ -635,160 +635,160 @@ msgstr "Awakolerwa"
 #. Translator: The word "blank" is used as an adjective, e.g. we are decsribing discs that are already blank
 #: ../src/udisks/g-udisks-device.c:41
 msgid "CD-ROM Disc"
-msgstr ""
+msgstr "Disiki CD etayongerekako bintu (CD-ROM)"
 
 #: ../src/udisks/g-udisks-device.c:41
 msgid "Blank CD-ROM Disc"
-msgstr ""
+msgstr "Disiki CD etayongerekako bintu (CD-ROM) - nkalu"
 
 #: ../src/udisks/g-udisks-device.c:42
 msgid "CD-R Disc"
-msgstr ""
+msgstr "Disiki CD etayongerekako bintu (CD-R)"
 
 #: ../src/udisks/g-udisks-device.c:42
 msgid "Blank CD-R Disc"
-msgstr ""
+msgstr "Disiki CD etayongerekako bintu (CD-R) - nkalu"
 
 #: ../src/udisks/g-udisks-device.c:43
 msgid "CD-RW Disc"
-msgstr ""
+msgstr "Disiki CD eyongerekako bintu (CD-RW)"
 
 #: ../src/udisks/g-udisks-device.c:43
 msgid "Blank CD-RW Disc"
-msgstr ""
+msgstr "Disiki CD eyongerekako bintu (CD-RW) - nkalu"
 
 #: ../src/udisks/g-udisks-device.c:44 ../src/udisks/g-udisks-device.c:45
 msgid "DVD-ROM Disc"
-msgstr ""
+msgstr "Disiki DVD etayongerekako bintu (DVD-ROM)"
 
 #: ../src/udisks/g-udisks-device.c:44 ../src/udisks/g-udisks-device.c:45
 msgid "Blank DVD-ROM Disc"
-msgstr ""
+msgstr "Disiki DVD etayongerekako bintu (DVD-ROM) - nkalu"
 
 #: ../src/udisks/g-udisks-device.c:46
 msgid "DVD-RW Disc"
-msgstr ""
+msgstr "Disiki DVD eyongerekako bintu (DVD-RW)"
 
 #: ../src/udisks/g-udisks-device.c:46
 msgid "Blank DVD-RW Disc"
-msgstr ""
+msgstr "Disiki DVD eyongerekako bintu (DVD-RW) - nkalu"
 
 #: ../src/udisks/g-udisks-device.c:47
 msgid "DVD-RAM Disc"
-msgstr ""
+msgstr "Disiki ya DVD ya kika kya RAM (DVD-RAM)"
 
 #: ../src/udisks/g-udisks-device.c:47
 msgid "Blank DVD-RAM Disc"
-msgstr ""
+msgstr "Disiki ya DVD ya kika kya RAM (DVD-RAM) - nkalu"
 
 #: ../src/udisks/g-udisks-device.c:48
 msgid "DVD+R Disc"
-msgstr ""
+msgstr "Disiki ya DVD+ etayongerekako bintu (DVD+R)"
 
 #: ../src/udisks/g-udisks-device.c:48
 msgid "Blank DVD+R Disc"
-msgstr ""
+msgstr "Disiki ya DVD+ etayongerekako bintu (DVD+R) - nkalu"
 
 #: ../src/udisks/g-udisks-device.c:49
 msgid "DVD+RW Disc"
-msgstr ""
+msgstr "Disiki ya DVD+ eyongerekako bintu (DVD+RW)"
 
 #: ../src/udisks/g-udisks-device.c:49
 msgid "Blank DVD+RW Disc"
-msgstr ""
+msgstr "Disiki ya DVD+ eyongerekako bintu (DVD+RW) - nkalu"
 
 #: ../src/udisks/g-udisks-device.c:50
 msgid "DVD+R DL Disc"
-msgstr ""
+msgstr "Disiki ya DVD+ etayongerekako bintu ya kika kya DL (DVD+R DL)"
 
 #: ../src/udisks/g-udisks-device.c:50
 msgid "Blank DVD+R DL Disc"
-msgstr ""
+msgstr "Disiki ya DVD+ etayongerekako bintu ya kika kya DL (DVD+R DL) - nkalu"
 
 #: ../src/udisks/g-udisks-device.c:51
 msgid "DVD+RW DL Disc"
-msgstr ""
+msgstr "Disiki ya DVD+ eyongerekako bintu ya kika kya DL (DVD+RW DL)"
 
 #: ../src/udisks/g-udisks-device.c:51
 msgid "Blank DVD+RW DL Disc"
-msgstr ""
+msgstr "Disiki ya DVD+ eyongerekako bintu ya kika kya DL (DVD+RW DL) - nkalu"
 
 #: ../src/udisks/g-udisks-device.c:52
 msgid "Blu-Ray Disc"
-msgstr ""
+msgstr "Disiki ya 'Blu-Ray'"
 
 #: ../src/udisks/g-udisks-device.c:52
 msgid "Blank Blu-Ray Disc"
-msgstr ""
+msgstr "Disiki ya 'Blu-Ray' - nkalu"
 
 #: ../src/udisks/g-udisks-device.c:53
 msgid "Blu-Ray R Disc"
-msgstr ""
+msgstr "Disiki ya 'Blu-Ray' etayongerekako bintu (R)"
 
 #: ../src/udisks/g-udisks-device.c:53
 msgid "Blank Blu-Ray R Disc"
-msgstr ""
+msgstr "Disiki ya 'Blu-Ray' etayongerekako bintu (R) - nkalu"
 
 #: ../src/udisks/g-udisks-device.c:54
 msgid "Blu-Ray RW Disc"
-msgstr ""
+msgstr "Disiki ya 'Blu-Ray' eyongerekako bintu (RW)"
 
 #: ../src/udisks/g-udisks-device.c:54
 msgid "Blank Blu-Ray RW Disc"
-msgstr ""
+msgstr "Disiki ya 'Blu-Ray' eyongerekako bintu (RW) - nkalu"
 
 #: ../src/udisks/g-udisks-device.c:55
 msgid "HD DVD Disc"
-msgstr ""
+msgstr "Disiki DVD ya kika kya HD (HD DVD)"
 
 #: ../src/udisks/g-udisks-device.c:55
 msgid "Blank HD DVD Disc"
-msgstr ""
+msgstr "Disiki DVD ya kika kya HD (HD DVD) - nkalu"
 
 #: ../src/udisks/g-udisks-device.c:56
 msgid "HD DVD-R Disc"
-msgstr ""
+msgstr "Disiki DVD etayongerekako bintu ya kika kya HD (DVD-R)"
 
 #: ../src/udisks/g-udisks-device.c:56
 msgid "Blank HD DVD-R Disc"
-msgstr ""
+msgstr "Disiki DVD etayongerwako bintu ya kika kya HD (HD DVD-R) - nkalu"
 
 #: ../src/udisks/g-udisks-device.c:57
 msgid "HD DVD-RW Disc"
-msgstr ""
+msgstr "Disiki DVD eyongerekako bintu ya kika kya HD (HD DVD-RW)"
 
 #: ../src/udisks/g-udisks-device.c:57
 msgid "Blank HD DVD-RW Disc"
-msgstr ""
+msgstr "Disiki DVD eyongerekako bintu ya kika kya HD (HD DVD-RW) - nkalu"
 
 #: ../src/udisks/g-udisks-device.c:58
 msgid "MO Disc"
-msgstr ""
+msgstr "Disiki ya kika kya MO"
 
 #: ../src/udisks/g-udisks-device.c:58
 msgid "Blank MO Disc"
-msgstr ""
+msgstr "Disiki ya kika kya MO - nkalu"
 
 #: ../src/udisks/g-udisks-device.c:59
 msgid "MRW Disc"
-msgstr ""
+msgstr "Disiki ya kika kya MRW"
 
 #: ../src/udisks/g-udisks-device.c:59
 msgid "Blank MRW Disc"
-msgstr ""
+msgstr "Disiki ya kika kya MRW - nkalu"
 
 #: ../src/udisks/g-udisks-device.c:60
 msgid "MRW/W Disc"
-msgstr ""
+msgstr "Disiki ya kika kya MRW/W"
 
 #: ../src/udisks/g-udisks-device.c:60
 msgid "Blank MRW/W Disc"
-msgstr ""
+msgstr "Disiki ya kika kya MRW/W - nkalu"
 
 #: ../src/udisks/g-udisks-device.c:299
 msgid "Blank Optical Disc"
-msgstr ""
+msgstr "Disiki CD oba DVD nkalu"
 
 #: ../src/udisks/g-udisks-device.c:301
 msgid "Optical Disc"
-msgstr ""
+msgstr "Disiki CD oba DVD"
