--- a/po/uk.po
+++ b/po/uk.po
@@ -7,14 +7,17 @@ msgstr ""
 "Project-Id-Version: lxfm\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-10-26 06:12+0000\n"
-"PO-Revision-Date: 2010-02-07 13:10+0100\n"
-"Last-Translator: Yarema aka Knedlyk <yupadmin@gmail.com>\n"
+"PO-Revision-Date: 2010-12-12 01:05+0200\n"
+"Last-Translator: Y P <yupadmin@gmail.com>\n"
 "Language-Team: Ukrainian <translation@linux.org.ua>\n"
+"Language: uk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%"
+"10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"X-Generator: Pootle 2.0.5\n"
 "X-Poedit-Country: Ukraine\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Poedit-Language: Ukrainian\n"
 
 #: ../data/ui/app-chooser.glade.h:1
@@ -76,7 +79,7 @@ msgstr ""
 
 #: ../data/ui/ask-rename.glade.h:4
 msgid "Apply this option to all existing files"
-msgstr "Застосувати цю опцію до всіх існуючих файлів?"
+msgstr "Застосувати цю опцію до всіх існуючих файлів"
 
 #: ../data/ui/ask-rename.glade.h:5
 msgid "Confirm to replace files"
@@ -196,7 +199,7 @@ msgstr "Тільки читати"
 
 #: ../data/ui/file-prop.glade.h:24
 msgid "Select the application used to open files of this type "
-msgstr "Виберіть програму для відкриття файлів цього типу"
+msgstr "Виберіть програму для відкриття файлів цього типу "
 
 #: ../data/ui/file-prop.glade.h:25
 msgid "Write only"
@@ -267,11 +270,14 @@ msgstr "Системні програми"
 
 #: ../data/ui/preferred-apps.glade.h:8
 msgid "The preferred Mail Client will be used to compose emails when you click on E-mail addresses."
-msgstr "Улюблений поштовий клієнт, що буде використаний для створення електронного листа, коли Ви клацаєте на e-mail адресу"
+msgstr ""
+"Улюблений поштовий клієнт, що буде використаний для створення електронного "
+"листа, коли Ви клацаєте на e-mail адресу"
 
 #: ../data/ui/preferred-apps.glade.h:9
 msgid "The preferred Web Browser will be used to open hyperlinks."
-msgstr "Улюблений веб-переглядач, що буде використаний для відкриття гіпер-посилань"
+msgstr ""
+"Улюблений веб-переглядач, що буде використаний для відкриття гіперпосилань"
 
 #: ../data/ui/exec-file.glade.h:1
 msgid "Execute File"
@@ -347,7 +353,7 @@ msgstr "Мережа"
 
 #: ../src/gtk/fm-progress-dlg.c:151
 msgid ": "
-msgstr ":"
+msgstr ": "
 
 #: ../src/gtk/fm-progress-dlg.c:214 ../src/gtk/fm-progress-dlg.c:233
 #, c-format
@@ -559,7 +565,7 @@ msgstr "Будь-ласка, виберіть теку"
 
 #: ../src/gtk/fm-gtk-utils.c:425
 msgid "Only system administrators have the permission to do this."
-msgstr "Тільки системний адміністратор може це зробити"
+msgstr "Це може зробити тільки системний адміністратор."
 
 #: ../src/gtk/fm-gtk-utils.c:504
 msgid "Do you want to move the selected files to trash can?"
